samples/_failures_safe/1761163363_d49464_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_62aa51c7.c: In function ‘main’:
./samples/SAFE/__tmp_62aa51c7.c:165:9: error: expected identifier at end of input
  165 |         printf("  %s: '%s'\n", token_type_to_string(tokens->
      |         ^~~~~~
./samples/SAFE/__tmp_62aa51c7.c:165:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_62aa51c7.c:165:9: error: expected declaration or statement at end of input
